Adjusted index.html

--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Network</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <!-- Sultan's part -->
         <nav class="navbar">
-            
+
         </nav>
         <div class="main">
             <!-- Gulnur's part -->
             <aside class="left">
 
             </aside>
-            <!-- Tumur's Team lead part -->
+            <!-- Timur's part -->
             <section class="middle">
 
             </section>
             <!-- Nailya's part -->
-             <aside class="right">
+            <aside class="right">
 
-             </aside>
+            </aside>
         </div>
         <!-- Zhyldyz's part -->
-         <footer class="footer">
+        <footer class="footer">
 
-         </footer>
+        </footer>
     </div>
 </body>
+
 </html>
